# Changelog for gitlab-workhorse

Formerly known as 'gitlab-git-http-server'.

v 8.17.0

- Add labkit monitoring for build metrics !440
- Log duration_ms when Workhorse hits a bad gateway !445

v 8.16.0

- Ignore CompleteMultipartUpload ETag !438
- Add NuGet route for package uploads !441
- Upgrade Gitaly client to v1.74.0 !443
- Set a time limit on git upload-pack requests

v 8.15.0

- Object store case insensitive ETag comparison !434
- Upgrade gitaly to 1.68.0 !435

v 8.14.1

- Set a time limit on git upload-pack requests

v 8.14.0

- Keep HTTP 1.0 cache headers from sendurl proxies !431

v 8.13.0

- Preserve original HTTP cache headers when proxying with sendurl !428

v8.12.0

- Fix health checks routes incorrectly intercepting errors !424
- Simplify badgateway RoundTripper !425

v8.11.0

- Accelerate GraphQL uploads !403
- Add route for handling Conan package uploads !412
- Accelerate wiki attachments !422

v8.10.1

- Set a time limit on git upload-pack requests

v8.10.0

- Use accelerated uploads for users/personal snippets
- Fix typo in keywatcher prometheus metrics !420

v8.9.0

- Update Gitaly library code to v1.57.0 !407
- Replace govendor with go mod !411
- Support gzip compression for Git info/refs !404
- Add prometheus counter for Gitaly connection stubs !414
- Support passing on Gitaly feature flags  !410

v8.8.1

- Use accelerated uploads for users/personal snippets

v8.8.0

- Filter title, description, text, and body from logs !402
- Remove redirections from Terminal to Channel !397
- Add option to set Sentry environment !396

v8.7.1

- Use accelerated uploads for users/personal snippets

v8.7.0

- Don't log http.ErrAbortHandler panics in sentry !392

v8.6.0

- Add new endpoint to add support to proxy websocket requests to build's services !370

v8.5.2

- Don't log http.ErrAbortHandler panics in sentry !392

v8.5.1

- Remove duplicate X-Request-Id response header !384

v8.5.0

- Replace terminal terminology to channel !382

v8.4.0
